// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`FastImage renders the native view directly 1`] = `
"<FastImageView
  loopCount={-1}
  progressEnabled={false}
  resizeMode="cover"
  source={
    {
      "cache": undefined,
      "headers": [
        {
          "name": "token",
          "value": "someToken",
        },
      ],
      "priority": "high",
      "provided": true,
      "uri": "https://facebook.github.io/react/img/logo_og.png",
    }
  }
  style={
    [
      {
        "overflow": "hidden",
      },
      {
        "height": 44,
        "width": 44,
      },
    ]
  }
/>"
`;

exports[`FastImage renders FastImageBackground as a view with the image and children 1`] = `
"<View
  style={
    {
      "height": 44,
      "width": 44,
    }
  }
>
  <FastImageView
    loopCount={-1}
    progressEnabled={false}
    resizeMode="cover"
    source={
      {
        "cache": undefined,
        "headers": undefined,
        "priority": undefined,
        "provided": true,
        "uri": "https://example.com/a.png",
      }
    }
    style={
      [
        {
          "overflow": "hidden",
        },
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "borderRadius": 4,
          },
        ],
      ]
    }
  />
  <FastImageView
    loopCount={-1}
    progressEnabled={false}
    resizeMode="cover"
    source={
      {
        "cache": undefined,
        "headers": undefined,
        "priority": undefined,
        "provided": true,
        "uri": "https://example.com/b.png",
      }
    }
    style={
      [
        {
          "overflow": "hidden",
        },
        undefined,
      ]
    }
  />
</View>"
`;
